<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:anroid="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.mstarsemi.mynetworkplayerapplication.VODFullscreenActivity">

    <SurfaceView android:id="@+id/VODSurfaceView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <LinearLayout android:id="@+id/FileListLayout" style="?metaButtonBarStyle"
        android:layout_width="500dp" android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="100dp"
        android:background="@color/black_overlay"
        android:orientation="vertical" tools:ignore="UselessParent">

        <ListView android:id="@+id/FileListView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone">
        </ListView>
    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:fitsSystemWindows="true">
        <TextView android:id="@+id/subtitletextDisplay"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom|center"
            android:gravity="center_horizontal"
            android:background="@color/black_overlay"
            android:visibility="gone"/>



        <LinearLayout android:id="@+id/fullscreen_content_controls_left"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button android:id="@+id/FileList"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filelist" />

            <Button android:id="@+id/PlayPause"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text ="@string/zhanting"
                android:visibility="gone"/>

            <Button android:id="@+id/PlaySeekback"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text ="@string/playerseekback"
                android:visibility="gone"/>

            <Button android:id="@+id/PlaySeek"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text ="@string/playerseek"
                android:visibility="gone"/>

            <Spinner android:id="@+id/AudioTrackList"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:gravity="center_horizontal"
                android:prompt="@string/audioTrackList"
                android:visibility="gone"/>

            <Spinner android:id="@+id/SubtitleTrackList"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:prompt="@string/audioTrackList"
                android:visibility="gone"/>

            <SeekBar android:id="@+id/timebar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:max="100"
                android:progress="0"
                android:layout_weight="3"
                android:background="@color/black_overlay"
                android:visibility="gone"/>

            <TextView android:id="@+id/totoaltime"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:textSize="12sp"
                android:text="@string/total_zeror"
                android:focusable="false"
                android:visibility="gone"/>
        </LinearLayout>
    </FrameLayout>

</FrameLayout>
